# ingenieria-datos-viabi

./: CHANGELOG.md  README.md  deploy.sh  pyproject.toml  release.config.mjs  services.yaml
.github/workflows/: semantic-release.yaml
consumer/: Dockerfile  consumer.py  consumer.yaml  install.sh  main.py
consumer/images/: Dockerfile  consumer.yaml  main.py
consumer/metadata/: Dockerfile  consumer.yaml  main.py
grafana/: grafana.yaml
influxdb/: influxdb.yaml  insert_influx.py  install.sh  query_influx.py
kafka/: kafka-volume.yaml  kafka.yaml
minio/: download_data.py  get_image_url.py  install.sh  minio.yaml  upload_data.py  upload_intrusiones.py
otros/: download_data.py  get_image_url.py  insert_influx.py  producer.py  query_influx.py  upload_data.py  upload_intrusiones.py
producer/: main.py
rabbitmq/: config.py  consumer.py  install.sh  producer.py  rabbitmq.yaml
telegraf/: telegraf-configmap.yaml  telegraf.yaml
visor/: insertar_frames.py  servidor.py  streaming.py
visor/Visor_Lara/: Cliente.html  Cliente.py  Servidor.py
visor/templates/: index.html  segundo_visores.html  style.css  tercer_visores.html
