[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["adriantoral <adrian.rubiboy11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
influxdb-client = "^1.48.0"
minio = "^7.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
