[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["adriantoral <adrian.rubiboy11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
influxdb-client = "^1.48.0"
minio = "^7.2.15"
opencv-python = "^4.11.0.86"
flask = "^3.1.0"
eventlet = "^0.39.1"
flask-socketio = "^5.5.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
